<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">

	<modelVersion>4.0.0</modelVersion>
	<groupId>gov.wa.wsdot.mobile</groupId>
	<artifactId>MobileApp</artifactId>
	<version>4.4.2</version>
	<packaging>war</packaging>
	<name>WSDOT Mobile App</name>
	<description>A GWT based HTML5 Web application targeting WebKit based browsers</description>

	<properties>
		<!-- GWT -->
		<gwt.version>2.7.0</gwt.version>
		<gwt.style>OBF</gwt.style>

		<!-- Maven -->
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<webappDirectory>${project.build.directory}/${project.build.finalName}</webappDirectory>
	</properties>

	<repositories>
		<repository>
			<id>sonatype snapshots</id>
			<url>https://oss.sonatype.org/content/repositories/snapshots/</url>
		</repository>
	</repositories>

	<build>
		<outputDirectory>${webappDirectory}/WEB-INF/classes</outputDirectory>

		<resources>
			<resource>
				<directory>src/main/resources</directory>
			</resource>
			<resource>
			    <directory>src/main/java</directory>
			        <includes>
			            <include>**/client/**</include> 
				        <include>**/*.gwt.xml</include>
				    </includes>
            </resource>
		</resources>

		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.0</version>
				<configuration>
					<source>1.7</source>
					<target>1.7</target>
				</configuration>
			</plugin>

			<!-- Skips the GWTTestCases during Junit Testing -->
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>2.12</version>
				<configuration>
					<includes>
						<include>**/*Test.java</include>
					</includes>
					<excludes>
						<exclude>**/*GwtTest.java</exclude>
					</excludes>
				</configuration>
			</plugin>

			<!-- GWT -->
			<!-- 'mvn gwt:run' -->
			<!-- 'mvn gwt:debug' -->
			<!-- 'mvn gwt:compile' -->
			<!-- 'mvn gwt:test' or 'mvn integration-test' -->
			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>gwt-maven-plugin</artifactId>
				<version>${gwt.version}</version>
				<configuration>
					<strict>true</strict>
					<testTimeOut>180</testTimeOut>
					<mode>htmlunit</mode>
					<!-- Switch to a suite to run tests faster -->
					<!-- <includes>**/*GwtTestSuite.java</includes> -->
					<!-- <excludes>**/*GwtTest.java</excludes> -->
					<includes>**/*GwtTest.java</includes>

					<extraJvmArgs>-Xss1024K -Xmx1024M -XX:MaxPermSize=256M</extraJvmArgs>
					<logLevel>INFO</logLevel>
					<style>${gwt.style}</style>

					<copyWebapp>true</copyWebapp>
					<hostedWebapp>${webappDirectory}</hostedWebapp>

					<runTarget>index.html</runTarget>
					<module>gov.wa.wsdot.mobile.MobileApp</module>
				</configuration>
				<executions>
					<execution>
						<goals>
							<goal>compile</goal>
							<goal>test</goal>
						</goals>
					</execution>
				</executions>
			</plugin>

		</plugins>
	</build>

	<dependencies>
		<!-- mgwt dependency -->
		<dependency>
			<groupId>com.googlecode.mgwt</groupId>
			<artifactId>mgwt</artifactId>
			<version>2.0.1-SNAPSHOT</version>
		</dependency>
        <dependency>
            <groupId>com.googlecode.mgwt</groupId>
            <artifactId>mgwt-themebase</artifactId>
            <version>2.0.0-SNAPSHOT</version>
        </dependency>
		<!-- HTML5 database -->
		<dependency>
			<groupId>com.google.code.gwt.database</groupId>
			<artifactId>gwt-html5-database</artifactId>
			<version>1.5.1-SNAPSHOT</version>
		</dependency>
		<!-- gwtphonegap dependency -->
		<dependency>
			<groupId>com.googlecode.gwtphonegap</groupId>
			<artifactId>gwtphonegap</artifactId>
			<version>3.5.0.0</version>
            <!-- Exclude outdated gwt-dev that breaks compile -->
            <exclusions>
                <exclusion>
                    <artifactId>gwt-dev</artifactId>
                    <groupId>com.google.gwt</groupId>
                </exclusion>
            </exclusions>
		</dependency>
		<!-- GWT Maps API V3 -->
		<dependency>
			<groupId>com.github.branflake2267</groupId>
			<artifactId>gwt-maps-api</artifactId>
			<version>3.10.0-alpha-7</version>
			<!-- Exclude outdated gwt-dev that breaks compile -->
			<exclusions>
				<exclusion>
					<artifactId>gwt-dev</artifactId>
					<groupId>com.google.gwt</groupId>
				</exclusion>
			</exclusions>
		</dependency>
		<!-- Other Google -->
		<dependency>
			<groupId>com.google.gwt.google-apis</groupId>
			<artifactId>gwt-ajaxloader</artifactId>
			<version>1.1.0</version>
		</dependency>
		<dependency>
			<groupId>com.google.gwt</groupId>
			<artifactId>gwt-user</artifactId>
			<version>${gwt.version}</version>
		</dependency>
		<dependency>
			<groupId>com.google.gwt</groupId>
			<artifactId>gwt-dev</artifactId>
			<version>${gwt.version}</version>
			<scope>provided</scope>
		</dependency>
        <dependency>
            <groupId>com.google.gwt</groupId>
            <artifactId>gwt-codeserver</artifactId>
            <version>${gwt.version}</version>
        </dependency>
		<dependency>
			<groupId>javax.validation</groupId>
			<artifactId>validation-api</artifactId>
			<version>1.0.0.GA</version>
		</dependency>
		<dependency>
			<groupId>javax.validation</groupId>
			<artifactId>validation-api</artifactId>
			<version>1.0.0.GA</version>
			<classifier>sources</classifier>
		</dependency>
		<!-- Testing -->
		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>[4.13.1,)</version>
			<scope>test</scope>
		</dependency>
	</dependencies>

</project>
